lib/glfw/wrapper.nim


proc init*(): cint {.cdecl, importc: "glfwInit", dynlib: GlfwDll.}
proc terminate*() {.cdecl, importc: "glfwTerminate", dynlib: GlfwDll.}
proc getVersion*(major: ptr cint; minor: ptr cint; rev: ptr cint) {.cdecl, 
    importc: "glfwGetVersion", dynlib: GlfwDll.}
proc getVersionString*(): cstring {.cdecl, importc: "glfwGetVersionString", 
                                    dynlib: GlfwDll.}
proc setErrorCallback*(cbfun: GLFWerrorfun): GLFWerrorfun {.cdecl, 
    importc: "glfwSetErrorCallback", dynlib: GlfwDll.}
proc getMonitors*(count: ptr cint): ptr GLFWmonitor {.cdecl, 
    importc: "glfwGetMonitors", dynlib: GlfwDll.}
proc getPrimaryMonitor*(): GLFWmonitor {.cdecl, 
    importc: "glfwGetPrimaryMonitor", dynlib: GlfwDll.}
proc getMonitorPos*(monitor: GLFWmonitor; xpos: ptr cint; ypos: ptr cint) {.
    cdecl, importc: "glfwGetMonitorPos", dynlib: GlfwDll.}
proc getMonitorPhysicalSize*(monitor: GLFWmonitor; width: ptr cint; 
                             height: ptr cint) {.cdecl, 
    importc: "glfwGetMonitorPhysicalSize", dynlib: GlfwDll.}
proc getMonitorName*(monitor: GLFWmonitor): cstring {.cdecl, 
    importc: "glfwGetMonitorName", dynlib: GlfwDll.}
proc setMonitorCallback*(cbfun: GLFWmonitorfun): GLFWmonitorfun {.cdecl, 
    importc: "glfwSetMonitorCallback", dynlib: GlfwDll.}
proc getVideoModes*(monitor: GLFWmonitor; count: ptr cint): ptr GLFWvidmode {.
    cdecl, importc: "glfwGetVideoModes", dynlib: GlfwDll.}
proc getVideoMode*(monitor: GLFWmonitor): ptr GLFWvidmode {.cdecl, 
    importc: "glfwGetVideoMode", dynlib: GlfwDll.}
proc setGamma*(monitor: GLFWmonitor; gamma: cfloat) {.cdecl, 
    importc: "glfwSetGamma", dynlib: GlfwDll.}
proc getGammaRamp*(monitor: GLFWmonitor): ptr GLFWgammaramp {.cdecl, 
    importc: "glfwGetGammaRamp", dynlib: GlfwDll.}
proc setGammaRamp*(monitor: GLFWmonitor; ramp: ptr GLFWgammaramp) {.cdecl, 
    importc: "glfwSetGammaRamp", dynlib: GlfwDll.}
proc defaultWindowHints*() {.cdecl, importc: "glfwDefaultWindowHints", 
                             dynlib: GlfwDll.}
proc windowHint*(target: cint; hint: cint) {.cdecl, importc: "glfwWindowHint", 
    dynlib: GlfwDll.}
proc createWindow*(width: cint; height: cint; title: cstring; 
                   monitor: GLFWmonitor; share: GLFWwindow): GLFWwindow {.
    cdecl, importc: "glfwCreateWindow", dynlib: GlfwDll.}
proc destroyWindow*(window: GLFWwindow) {.cdecl, 
    importc: "glfwDestroyWindow", dynlib: GlfwDll.}
proc windowShouldClose*(window: GLFWwindow): cint {.cdecl, 
    importc: "glfwWindowShouldClose", dynlib: GlfwDll.}
proc setWindowShouldClose*(window: GLFWwindow; value: cint) {.cdecl, 
    importc: "glfwSetWindowShouldClose", dynlib: GlfwDll.}
proc setWindowTitle*(window: GLFWwindow; title: cstring) {.cdecl, 
    importc: "glfwSetWindowTitle", dynlib: GlfwDll.}
proc getWindowPos*(window: GLFWwindow; xpos: ptr cint; ypos: ptr cint) {.
    cdecl, importc: "glfwGetWindowPos", dynlib: GlfwDll.}
proc setWindowPos*(window: GLFWwindow; xpos: cint; ypos: cint) {.cdecl, 
    importc: "glfwSetWindowPos", dynlib: GlfwDll.}
proc getWindowSize*(window: GLFWwindow; width: ptr cint; height: ptr cint) {.
    cdecl, importc: "glfwGetWindowSize", dynlib: GlfwDll.}
proc setWindowSize*(window: GLFWwindow; width: cint; height: cint) {.
    cdecl, importc: "glfwSetWindowSize", dynlib: GlfwDll.}
proc getFramebufferSize*(window: GLFWwindow; width: ptr cint; 
                         height: ptr cint) {.cdecl, 
    importc: "glfwGetFramebufferSize", dynlib: GlfwDll.}
proc iconifyWindow*(window: GLFWwindow) {.cdecl, 
    importc: "glfwIconifyWindow", dynlib: GlfwDll.}
proc restoreWindow*(window: GLFWwindow) {.cdecl, 
    importc: "glfwRestoreWindow", dynlib: GlfwDll.}
proc showWindow*(window: GLFWwindow) {.cdecl, importc: "glfwShowWindow", 
    dynlib: GlfwDll.}
proc hideWindow*(window: GLFWwindow) {.cdecl, importc: "glfwHideWindow", 
    dynlib: GlfwDll.}
proc getWindowMonitor*(window: GLFWwindow): GLFWmonitor {.cdecl, 
    importc: "glfwGetWindowMonitor", dynlib: GlfwDll.}
proc getWindowAttrib*(window: GLFWwindow; attrib: cint): cint {.cdecl, 
    importc: "glfwGetWindowAttrib", dynlib: GlfwDll.}
proc setWindowUserPointer*(window: GLFWwindow; pointer: pointer) {.cdecl, 
    importc: "glfwSetWindowUserPointer", dynlib: GlfwDll.}
proc getWindowUserPointer*(window: GLFWwindow): pointer {.cdecl, 
    importc: "glfwGetWindowUserPointer", dynlib: GlfwDll.}
proc setWindowPosCallback*(window: GLFWwindow; cbfun: GLFWwindowposfun): GLFWwindowposfun {.
    cdecl, importc: "glfwSetWindowPosCallback", dynlib: GlfwDll.}
proc setWindowSizeCallback*(window: GLFWwindow; cbfun: GLFWwindowsizefun): GLFWwindowsizefun {.
    cdecl, importc: "glfwSetWindowSizeCallback", dynlib: GlfwDll.}
proc setWindowCloseCallback*(window: GLFWwindow; cbfun: GLFWwindowclosefun): GLFWwindowclosefun {.
    cdecl, importc: "glfwSetWindowCloseCallback", dynlib: GlfwDll.}
proc setWindowRefreshCallback*(window: GLFWwindow; 
                               cbfun: GLFWwindowrefreshfun): GLFWwindowrefreshfun {.
    cdecl, importc: "glfwSetWindowRefreshCallback", dynlib: GlfwDll.}
proc setWindowFocusCallback*(window: GLFWwindow; cbfun: GLFWwindowfocusfun): GLFWwindowfocusfun {.
    cdecl, importc: "glfwSetWindowFocusCallback", dynlib: GlfwDll.}
proc setWindowIconifyCallback*(window: GLFWwindow; 
                               cbfun: GLFWwindowiconifyfun): GLFWwindowiconifyfun {.
    cdecl, importc: "glfwSetWindowIconifyCallback", dynlib: GlfwDll.}
proc setFramebufferSizeCallback*(window: GLFWwindow; 
                                 cbfun: GLFWframebuffersizefun): GLFWframebuffersizefun {.
    cdecl, importc: "glfwSetFramebufferSizeCallback", dynlib: GlfwDll.}
proc pollEvents*() {.cdecl, importc: "glfwPollEvents", dynlib: GlfwDll.}
proc waitEvents*() {.cdecl, importc: "glfwWaitEvents", dynlib: GlfwDll.}
proc getInputMode*(window: GLFWwindow; mode: cint): cint {.cdecl, 
    importc: "glfwGetInputMode", dynlib: GlfwDll.}
proc setInputMode*(window: GLFWwindow; mode: cint; value: cint) {.cdecl, 
    importc: "glfwSetInputMode", dynlib: GlfwDll.}
proc getKey*(window: GLFWwindow; key: cint): cint {.cdecl, 
    importc: "glfwGetKey", dynlib: GlfwDll.}
proc getMouseButton*(window: GLFWwindow; button: cint): cint {.cdecl, 
    importc: "glfwGetMouseButton", dynlib: GlfwDll.}
proc getCursorPos*(window: GLFWwindow; xpos: ptr cdouble; 
                   ypos: ptr cdouble) {.cdecl, importc: "glfwGetCursorPos", 
    dynlib: GlfwDll.}
proc setCursorPos*(window: GLFWwindow; xpos: cdouble; ypos: cdouble) {.
    cdecl, importc: "glfwSetCursorPos", dynlib: GlfwDll.}
proc setKeyCallback*(window: GLFWwindow; cbfun: GLFWkeyfun): GLFWkeyfun {.
    cdecl, importc: "glfwSetKeyCallback", dynlib: GlfwDll.}
proc setCharCallback*(window: GLFWwindow; cbfun: GLFWcharfun): GLFWcharfun {.
    cdecl, importc: "glfwSetCharCallback", dynlib: GlfwDll.}
proc setMouseButtonCallback*(window: GLFWwindow; cbfun: GLFWmousebuttonfun): GLFWmousebuttonfun {.
    cdecl, importc: "glfwSetMouseButtonCallback", dynlib: GlfwDll.}
proc setCursorPosCallback*(window: GLFWwindow; cbfun: GLFWcursorposfun): GLFWcursorposfun {.
    cdecl, importc: "glfwSetCursorPosCallback", dynlib: GlfwDll.}
proc setCursorEnterCallback*(window: GLFWwindow; cbfun: GLFWcursorenterfun): GLFWcursorenterfun {.
    cdecl, importc: "glfwSetCursorEnterCallback", dynlib: GlfwDll.}
proc setScrollCallback*(window: GLFWwindow; cbfun: GLFWscrollfun): GLFWscrollfun {.
    cdecl, importc: "glfwSetScrollCallback", dynlib: GlfwDll.}
proc joystickPresent*(joy: cint): cint {.cdecl, 
    importc: "glfwJoystickPresent", dynlib: GlfwDll.}
proc getJoystickAxes*(joy: cint; count: ptr cint): ptr cfloat {.cdecl, 
    importc: "glfwGetJoystickAxes", dynlib: GlfwDll.}
proc getJoystickButtons*(joy: cint; count: ptr cint): ptr cuchar {.cdecl, 
    importc: "glfwGetJoystickButtons", dynlib: GlfwDll.}
proc getJoystickName*(joy: cint): cstring {.cdecl, 
    importc: "glfwGetJoystickName", dynlib: GlfwDll.}
proc setClipboardString*(window: GLFWwindow; string: cstring) {.cdecl, 
    importc: "glfwSetClipboardString", dynlib: GlfwDll.}
proc getClipboardString*(window: GLFWwindow): cstring {.cdecl, 
    importc: "glfwGetClipboardString", dynlib: GlfwDll.}
proc getTime*(): cdouble {.cdecl, importc: "glfwGetTime", dynlib: GlfwDll.}
proc setTime*(time: cdouble) {.cdecl, importc: "glfwSetTime", dynlib: GlfwDll.}
proc makeContextCurrent*(window: GLFWwindow) {.cdecl, 
    importc: "glfwMakeContextCurrent", dynlib: GlfwDll.}
proc getCurrentContext*(): GLFWwindow {.cdecl, 
    importc: "glfwGetCurrentContext", dynlib: GlfwDll.}
proc swapBuffers*(window: GLFWwindow) {.cdecl, importc: "glfwSwapBuffers", 
    dynlib: GlfwDll.}
proc swapInterval*(interval: cint) {.cdecl, importc: "glfwSwapInterval", 
                                     dynlib: GlfwDll.}
proc extensionSupported*(extension: cstring): cint {.cdecl, 
    importc: "glfwExtensionSupported", dynlib: GlfwDll.}
proc getProcAddress*(procname: cstring): GLFWglproc {.cdecl, 
    importc: "glfwGetProcAddress", dynlib: GlfwDll.}
